fix : sqs 큐 조정